flux/manifests/04-apps/management/fleet/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: fleet
  labels:
    app.kubernetes.io/name: fleet
